--- a/praticando/p013/index.html
+++ b/praticando/p013/index.html
@@ -7,6 +7,9 @@
     <title>Basketball Game</title>
     <style>
         /* CSS estilização */
+
+        @import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
+
         #court {
             position: relative;
             width: 1920px;
@@ -53,6 +56,24 @@
             font-size: 2rem;
             color: red;
         }
+
+        #back{
+            text-align: center;
+            margin-top: 30px;
+            font-size: 5rem;
+            font-family: 'Paytone One', sans-serif;
+            text-decoration: none;
+
+        }
+
+        #back a{
+            text-decoration: none;
+            color: #993A0B;
+            border-radius: 15px;
+            border: 1px solid #993A0B;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+        }
         /* ... */
         body{
             background-image: url(./img/aaaaaaaaaaaaaaaaaaa.png);
@@ -69,6 +90,8 @@
         <div id="level">Level: 1</div>
         <div id="timer">Time: 60</div>
     </div>
+
+    <div id="back"><a href="./princidex.html" target="_self" >VOLTAR</a></div>
 
     <script>
         // JavaScript 
