--- a/praticando/p013/index.html
+++ b/praticando/p013/index.html
@@ -80,6 +80,11 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+
+        ::-webkit-scrollbar{
+            height: 0px;
+            width: 0px;
+        }
     </style>
 </head>
 <body>
