--- a/praticando/p013/princidex.html
+++ b/praticando/p013/princidex.html
@@ -21,7 +21,7 @@
             <li id="li1">    
                 <div>
                     <picture>
-                        <img class="image_body" src="./img/image1" alt="img_site">
+                        <img class="image_body" src="./img/image1" alt="img_site" id="img1">
                     </picture>
                 </div>
 
@@ -34,7 +34,7 @@
             <li id="li2">    
                 <div>
                     <picture>
-                        <img class="image_body" src="./img/image2" alt="img_site">
+                        <img class="image_body" src="./img/image2" alt="img_site" id="img2">
                     </picture>
                 </div>
                  <div id="txt">
